Issue/upgrade to spring (#3828)
SB3 upgrades